--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,11 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.12"
 aiogram = "^3.10.0"
-aiopg = "^1.4.0"
 asyncpg = "^0.29.0"
+google-generativeai = "^0.7.2"
+openai = "^1.38.0"
+langchain = "^0.2.12"
+
 
 
 [build-system]
