--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ langchain-nvidia-ai-endpoints = "^0.2.0"
 pytest = "^8.3.2"
 langchain-google-vertexai = "^1.0.8"
 termcolor = "^2.4.0"
+pytest-asyncio = "^0.23.8"
+pytest-timeout = "^2.3.1"
 
 
 
