--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ termcolor = "^2.4.0"
 pytest-asyncio = "^0.23.8"
 pytest-timeout = "^2.3.1"
 transformers = "^4.44.0"
+requests = "^2.32.3"
+beautifulsoup4 = "^4.12.3"
 
 
 
