change model to gemini and setting it to ansrew only to cryptocurrency queries

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ requests = "^2.32.3"
 beautifulsoup4 = "^4.12.3"
 langgraph = "^0.2.3"
 langchain_chroma = "^0.1.2"
+langchain-google-genai = "^1.0.8"
 
 
 
