--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ langgraph = "^0.2.3"
 langchain_chroma = "^0.1.2"
 langchain-google-genai = "^1.0.8"
 apscheduler = "^3.10.4"
+black = "^24.8.0"
 
 
 
